<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearNotaActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="374dp"
        android:layout_height="23dp"
        android:layout_marginTop="28dp"
        android:text="@string/label1_crearNotas"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="374dp"
        android:layout_height="71dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/caja1_crearNotas"
        android:inputType="textPersonName"
        android:textColor="#AAA3A3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button_notas"
        android:layout_width="149dp"
        android:layout_height="57dp"
        android:layout_marginBottom="28dp"
        android:text="@string/boton1_crearNotas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnknownId" />

    <Button
        android:id="@+id/button_notas2"
        android:layout_width="149dp"
        android:layout_height="57dp"
        android:layout_marginBottom="28dp"
        android:text="@string/boton2_crearNotas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnknownId" />

</androidx.constraintlayout.widget.ConstraintLayout>